# cuda-sobel-edge-detection

./: CMakeLists.txt  Makefile  README.md  custom_sobel
src/: custom_sobel.cpp  main.cpp  sobel.cu  sobel_kernel.cu
